k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-springboot-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-springboot-deployment
  template:
    metadata:
      labels:
        app: k8s-springboot-deployment
    spec:
      containers:
      - name: k8s-springboot-deployment
        image: peothach/k8s-springboot:7.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
