k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-springboot-service
spec:
  type: ClusterIP
  selector:
    app: k8s-springboot-deployment
  ports:
  - port: 80
    targetPort: 80
